# AI-agents-evaluation

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  README.md  TASK_TEMPLATE.md  TECH_SPEC.md  TESTING.md  agent_evaluation_workbench_6_phase_plan_zh.docx  agent_evaluation_workbench_pm_report.docx  agent_evaluation_workbench_pm_report_zh.docx  agent_evaluation_workbench_technical_design_zh.docx  docker-compose.yml  mypy.ini  user_opinions.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/adapters/: __init__.py  openai_adapter.py  stub.py
backend/app/api/: __init__.py  calibration.py  compare.py  datasets.py  registry.py  reviews.py  routes.py  runs.py  task_runs.py
backend/app/models/: __init__.py  dataset.py  registry.py  review.py  run.py  trace.py
backend/app/schemas/: __init__.py  calibration.py  compare.py  contracts.py  datasets.py  registry.py  reviews.py  runs.py  summary.py  traces.py
backend/app/services/: __init__.py  calibration.py  compare.py  datasets.py  registry.py  reviews.py  runs.py  scoring.py  summary.py  trace_intelligence.py  traces.py
backend/app/worker/: __init__.py  celery_app.py  tasks.py
backend/tests/: conftest.py  test_config.py  test_contracts.py  test_datasets.py  test_health.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase16.py  test_phase6.py  test_phase8.py  test_phase9.py  test_runs.py  test_traces.py
backend/tests/fixtures/: agent_version_v1.json  agent_version_v2.json  (+9 more)
(+91 files in other folders)
