[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-evaluation-workbench-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for Agent Evaluation Workbench"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4,<6.0",
  "fastapi>=0.115,<1.0",
  "openai>=1.76,<2.0",
  "pydantic>=2.10,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn>=0.34,<1.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
